@@ -17,6 +17,13 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+Add new function object_get_env_recursive() to find the outermost environment
+object for a given object.
+--
+common/object.c, include/libproto.h: Add function.
+server/{rune.c,spell_attack.c}: Use function where appropriate.
+Andreas Kirschbaum 2005-11-01
+
 General cleanup of weather code.
 --
 server/weather: Declare many functions and variables as "static", add
